--- a/views/select-movie.ejs
+++ b/views/select-movie.ejs
@@ -53,7 +53,7 @@
                         <div class="movie-details ms-4">
                             <p>Seleccione un horario:</p>
 
-                            <form action="/reservar" method="POST">
+                            <form action="/seats" method="POST">
                                 <div class="btn-group btn-group-toggle" data-toggle="buttons">
                                     <% movie.schedule.forEach((hora, index)=> { %>
                                         <input type="radio" class="btn-check" name="horario"
