--- a/views/select-seats.ejs
+++ b/views/select-seats.ejs
@@ -13,21 +13,6 @@
         <!-- Navbar (Opcional) -->
         <div class="navbar">
             <h1>CineTickets</h1>
-            <!-- Menú de Usuario a la Derecha -->
-            <div class="menu-usuario dropdown">
-                <button class="btn btn-usuario dropdown-toggle" type="button" id="menuUsuario" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                    Usuario
-                </button>
-                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="menuUsuario">
-                    <li><a class="dropdown-item" href="#">Cambiar Contraseña</a></li>
-                    <li><a class="dropdown-item" href="#">Mis Compras</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
-                </ul>
-            </div>
         </div>
 
         <div class="content">
@@ -49,7 +34,7 @@
                                 <%= sala %>
                             </p>
                             <p class="card-text"><strong>Hora:</strong>
-                                <%= horario %>
+                                <%= hora %>
                             </p>
                         </div>
                     </div>
