--- a/public/css/login-register.css
+++ b/public/css/login-register.css
@@ -27,6 +27,7 @@ body {
     border-radius: 5px;
     transition: background-color 0.3s, border-color 0.3s;
     padding: 10px;
+    width: 100%;
 }
 
 /* Focused Input Fields */
