--- a/views/confirm-reservation.ejs
+++ b/views/confirm-reservation.ejs
@@ -13,21 +13,6 @@
         <!-- Navbar (Opcional) -->
         <div class="navbar">
             <h1>CineTickets</h1>
-            <!-- Menú de Usuario a la Derecha -->
-            <div class="menu-usuario dropdown">
-                <button class="btn btn-usuario dropdown-toggle" type="button" id="menuUsuario" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                    Usuario
-                </button>
-                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="menuUsuario">
-                    <li><a class="dropdown-item" href="#">Cambiar Contraseña</a></li>
-                    <li><a class="dropdown-item" href="#">Mis Compras</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
-                </ul>
-            </div>
         </div>
         <div class="content">
             <h2 class="text-center">Confirmar Reserva</h2>
@@ -39,7 +24,7 @@
                     <%= fecha %>
                 </p>
                 <p><strong>Hora:</strong>
-                    <%= horario %>
+                    <%= hora %>
                 </p>
                 <p><strong>Asientos:</strong>
                     <%= asientos.join(', ') %></p>
@@ -50,8 +35,9 @@
                     <label for="payment" class="form-label">Método de Pago</label>
                     <select class="form-select" id="payment" name="payment" required>
                         <option value="" disabled selected>Selecciona un método de pago</option>
-                        <option value="card">Tarjeta de Crédito/Débito</option>
-                        <option value="paypal">PayPal</option>
+                        <option value="Tarjeta de Crédito/Debito">Tarjeta de Crédito/Debito</option>
+                        <option value="Transferencia">Transferencia</option>
+                        <option value="PayPal">PayPal</option>
                     </select>
                 </div>
                 <div class="text-center mt-4">
