--- a/views/my-reservations.ejs
+++ b/views/my-reservations.ejs
@@ -43,7 +43,7 @@
                 <li>
                     <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
+                <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
             </ul>
         </div>
     </div>
