--- a/views/select-movie.ejs
+++ b/views/select-movie.ejs
@@ -58,7 +58,7 @@
                                     <% movie.schedule.forEach((hora, index)=> { %>
                                         <input type="radio" class="btn-check" name="hora"
                                             id="horario-<%= movieIndex %>-<%= index %>" value="<%= hora %>"
-                                            autocomplete="off">
+                                            autocomplete="off" data-movie="<%= movie.title %>">
                                         <label class="btn btn-outline-primary"
                                             for="horario-<%= movieIndex %>-<%= index %>">
                                             <%= hora %>
@@ -68,7 +68,12 @@
                                 <input type="hidden" name="pelicula" value="<%= movie.title %>">
                                 <input type="hidden" name="fecha" value="<%= movie.date %>">
                                 <input type="hidden" name="sala" value="<%= movie.room %>">
-                                <button type="submit" class="btn btn-orange">Reservar</button>
+                                <button type="submit" class="btn btn-orange position-relative seatCountButton">Reservar
+                                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-success" id="seats-count-<%= movie._id %>">
+                                        0 
+                                        <span class="visually-hidden">unread messages</span>
+                                    </span>
+                                </button>
                             </form>
                         </div>
                     </div>
@@ -77,7 +82,16 @@
         </div>
     </div>
     <script src="./bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script>
+        const socket = io();
+
+        socket.on('seatCount', function(data) {
+            const { id, count } = data;
+            const seatSpan = document.querySelector(`#seats-count-${id}`);
+            seatSpan.textContent = count;
+        });
+
         document.addEventListener('DOMContentLoaded', function () {
             const radioButtons = document.querySelectorAll('input[type="radio"]');
 
@@ -92,6 +106,14 @@
                             r.checked = false; // Deselecciona los radios de otras películas
                         }
                     });
+
+                    // Actualizar el data-time del botón basado en la selección del radio button
+                    const selectedTime = this.value;
+                    const movieTitle = this.getAttribute('data-movie');
+
+                    // Emitir el evento al servidor con la película y la hora seleccionada
+                    socket.emit('getSeatCount', { movieTitle, hour: selectedTime });
+
                 });
             });
         });
