--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,13 +15,13 @@
             <h1>Regístrate</h1>
             <form action="/register" method="POST">
                 <div class="mb-4">
-                    <input type="text" class="form-control" name="firstName" placeholder="Nombre" required>
+                    <input type="text" class="form-control" name="firstName" placeholder="Nombre" required autocomplete="off">
                 </div>
                 <div class="mb-4">
-                    <input type="text" class="form-control" name="lastName" placeholder="Apellido" required>
+                    <input type="text" class="form-control" name="lastName" placeholder="Apellido" required autocomplete="off">
                 </div>
                 <div class="mb-4">
-                    <input type="email" class="form-control" name="email" placeholder="Correo Electrónico" required>
+                    <input type="email" class="form-control" name="email" placeholder="Correo Electrónico" required autocomplete="off">
                 </div>
                 <div class="mb-4">
                     <input type="password" class="form-control" name="password" placeholder="Contraseña" required>
